# smap

./: .clang-complete  CMakeLists.txt  compile_flags.txt
assets/sourcemaps/: a.json  b.json  c.json
include/smap/: io.h  macros.h  smap.h  utils.h
src/: io.c  main.c  smap.c  utils.c
